[package]
name = "controller"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-serial = "4.3.3"

