[package]
name = "tophamm-helpers"
version = "0.0.1"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", default-features = false, features = ["sync"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
